[gd_scene load_steps=2 format=2]

[ext_resource path="res://Train/Dev/DebugTitle/DebugTitle.gd" type="Script" id=1]

[node name="DebugTitle" type="Node2D"]
script = ExtResource( 1 )

[node name="Open" type="Button" parent="."]
margin_left = 1.0
margin_top = 93.0
margin_right = 104.0
margin_bottom = 123.0
text = "OPEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 2.0
margin_top = 136.0
margin_right = 105.0
margin_bottom = 166.0
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 1.0
margin_top = 2.0
margin_right = 97.0
margin_bottom = 32.0
text = "Crazy Train"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 165.0
margin_top = 51.0
margin_right = 936.0
margin_bottom = 437.0
window_title = "Open a File"
resizable = true
dialog_text = "Open Level"
mode = 0
access = 2
filters = PoolStringArray( "*.json" )
current_dir = "/home/harrison/downloads"
current_path = "/home/harrison/downloads/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Open" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
